# 3d_calibration_tool

./: CMakeLists.txt  LICENSE  README.md
forms/: ConfigDialog.ui  MainWidget.ui
src/: BlackWhitePalette.h  CloudCatcher.cpp  CloudCatcher.h  CloudManipulation.cpp  CloudManipulation.h  CloudWidget.cpp  CloudWidget.h  ConfigDialog.cpp  ConfigDialog.h  ImageBuilder.cpp  ImageBuilder.h  Imager.h  ImagerUVC.cpp  ImagerUVC.h  IronPalette.h  Kinect.cpp  Kinect.h  KinectSensor.cpp  KinectSensor.h  KinectSensorThread.cpp  KinectSensorThread.h  MainWidget.cpp  MainWidget.h  OpenCvWidget.cpp  OpenCvWidget.h  OpenNiDevice.cpp  OpenNiDevice.h  OpenNiSensor.cpp  OpenNiSensor.h  OpenNiSensorThread.cpp  OpenNiSensorThread.h  PIImager.h  PlaneFinder.cpp  PlaneFinder.h  PointFinder.cpp  PointFinder.h  ThermoCam.cpp  ThermoCam.h  ThermoCamThread.cpp  ThermoCamThread.h  (+3 more)
src/picture/: resources.qrc
